--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,31 +144,29 @@ section {
 }
 /* Hero Style End */
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
-    margin: 0 auto
+    margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
  .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
+
 .primary-border {
     border-color: #fce138;
 }
@@ -202,7 +200,6 @@ section {
 }
 
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -240,14 +237,6 @@ section {
     line-height: 1.3;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
 .section-title {
     font-size: 55px;
     display: inline-block;
@@ -259,7 +248,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -286,15 +274,26 @@ section {
     font-size: 32px;
   }
   
-  .contact-info p, .contact-info address {
+.contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
     font-style: normal;
-  }
-  
-  .contact-info a {
-    color: #fce138;
-  }
+}
 
-  /* REACH OUT STYLES END */
+.contact-info a {
+    color: #fce138;
+}
+/* REACH OUT STYLES END */
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+}
