added services grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,6 +272,21 @@ section {
     color: #024e76;
 }
 
+/* SERVICES STYLES START */
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
+/* SERVICES STYLES END */
+
 /* REACH OUT STYLES START */
 .contact {
     background: #024e76;
@@ -336,7 +351,6 @@ section {
     padding: 15px 0;
     font-size: 16px;
 }
-
 /* REACH OUT STYLES END */
 
 .text-left {
