--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,18 @@ section {
     justify-content: space-around;
 }
 
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+}
+
 .trainer {
     margin: 20px;
     background: var(--secondary-color);
@@ -344,9 +356,54 @@ section {
     flex: 1;
 }
 
-.trainer img {
+.trainer-img {
     width: 100%;
+    min-height: 300px;
+    background-size: cover;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
 }
+
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(0deg, var(--secondary-color), rgba(252, 225, 56, 0.3) 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity .5s;
+}
+
+.trainer:hover .trainer-img::after {
+    opacity: 1;
+}
+
+.trainer-img h3 {
+    position: relative;
+    z-index: 1;
+    font-size: 28px;
+    margin-bottom: 5px;
+    top: 200px;
+    transition: top .6s;
+  }
+  
+.trainer-img h4 {
+  position: relative;
+  z-index: 1;
+  font-size: 22px;
+  top: 200px;
+  transition: top .6s;
+}
+
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0;
+}
+
 
 .trainer-bio {
     padding: 25px;
@@ -355,12 +412,14 @@ section {
 
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
 }
 
 .trainer-bio p {
@@ -587,6 +646,14 @@ section {
 
     .step-text {
         flex: 100%;  
+    }
+
+    .trainer-img h3, .trainer-img h4, .trainer-img::after {
+        display: none;
+    }    
+
+    .trainer-bio h3, .trainer-bio h4 {
+        display: block;
     }
 
     .service-grid-container {
